--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -48,10 +48,10 @@
         ItalicFont         = Noto Serif Italic,
         BoldItalicFont     = Noto Serif Bold Italic,
     ]
-    \setmonofont{Source Code Pro Regular}[
-        BoldFont           = Source Code Pro Bold,
-        ItalicFont         = Source Code Pro Italic,
-        BoldItalicFont     = Source Code Pro Bold Italic,
+    \setmonofont{JetBrains Mono Regular}[
+        BoldFont           = JetBrains Mono Bold,
+        ItalicFont         = JetBrains Mono Italic,
+        BoldItalicFont     = JetBrains Mono Bold Italic,
     ]
     \setsansfont{Source Sans 3 Regular}[
         BoldFont           = Source Sans 3 Bold,
